des: rewrite external xacros to support tf namespace and replace package:// with file:// during xacro expansion to support gazebo

--- a/mobile_manipulator_description/package.xml
+++ b/mobile_manipulator_description/package.xml
@@ -19,6 +19,7 @@
     <exec_depend>xacro</exec_depend>
 
     <exec_depend>tracer_description</exec_depend>
+    <exec_depend>orbbec_description</exec_depend>
 
     <export>
         <build_type>ament_cmake</build_type>
