--- a/mobile_manipulator_gazebo_sim/config/gz_bridge.yaml
+++ b/mobile_manipulator_gazebo_sim/config/gz_bridge.yaml
@@ -5,12 +5,12 @@
   gz_type_name: gz.msgs.Clock
   direction: GZ_TO_ROS
 
-- topic_name: front_lidar/scan
+- topic_name: lidar_front/scan
   ros_type_name: sensor_msgs/msg/LaserScan
   gz_type_name: gz.msgs.LaserScan
   direction: GZ_TO_ROS
 
-- topic_name: rear_lidar/scan
+- topic_name: lidar_rear/scan
   ros_type_name: sensor_msgs/msg/LaserScan
   gz_type_name: gz.msgs.LaserScan
   direction: GZ_TO_ROS
