bringup: add lidar filtering and merging

--- a/mobile_manipulator_bringup/package.xml
+++ b/mobile_manipulator_bringup/package.xml
@@ -12,6 +12,9 @@
     <buildtool_depend>ament_cmake</buildtool_depend>
 
     <!-- execution dependencies -->
+    <exec_depend>dual_laser_merger</exec_depend>
+    <exec_depend>laser_filters</exec_depend>
+
     <exec_depend>mobile_manipulator_description</exec_depend>
 
     <export>
