use diff drive controller from gazebo

--- a/mobile_manipulator_gazebo_sim/config/gz_bridge.yaml
+++ b/mobile_manipulator_gazebo_sim/config/gz_bridge.yaml
@@ -5,6 +5,21 @@
   gz_type_name: gz.msgs.Clock
   direction: GZ_TO_ROS
 
+- topic_name: /cmd_vel
+  ros_type_name: geometry_msgs/msg/Twist
+  gz_type_name: gz.msgs.Twist
+  direction: ROS_TO_GZ
+
+- topic_name: /odom
+  ros_type_name: nav_msgs/msg/Odometry
+  gz_type_name: gz.msgs.Odometry
+  direction: GZ_TO_ROS
+
+- topic_name: /tf
+  ros_type_name: tf2_msgs/msg/TFMessage
+  gz_type_name: gz.msgs.Pose_V
+  direction: GZ_TO_ROS
+
 - topic_name: lidar_front/scan
   ros_type_name: sensor_msgs/msg/LaserScan
   gz_type_name: gz.msgs.LaserScan
