gazebo_sim: use ground truth odom and bug fix for depth camera

--- a/mobile_manipulator_gazebo_sim/config/gz_bridge.yaml
+++ b/mobile_manipulator_gazebo_sim/config/gz_bridge.yaml
@@ -5,6 +5,16 @@
   gz_type_name: gz.msgs.Clock
   direction: GZ_TO_ROS
 
+- topic_name: /tf
+  ros_type_name: tf2_msgs/msg/TFMessage
+  gz_type_name: gz.msgs.Pose_V
+  direction: GZ_TO_ROS
+
+- topic_name: odom
+  ros_type_name: nav_msgs/msg/Odometry
+  gz_type_name: gz.msgs.Odometry
+  direction: GZ_TO_ROS
+
 - topic_name: lidar_front/scan
   ros_type_name: sensor_msgs/msg/LaserScan
   gz_type_name: gz.msgs.LaserScan
@@ -15,16 +25,11 @@
   gz_type_name: gz.msgs.LaserScan
   direction: GZ_TO_ROS
 
-- topic_name: camera_top/color/image_raw
-  ros_type_name: sensor_msgs/msg/Image
-  gz_type_name: gz.msgs.Image
-  direction: GZ_TO_ROS
 - topic_name: camera_top/color/camera_info
   ros_type_name: sensor_msgs/msg/CameraInfo
   gz_type_name: gz.msgs.CameraInfo
   direction: GZ_TO_ROS
-
-- topic_name: camera_top/depth/image_raw
+- topic_name: camera_top/color/image_raw
   ros_type_name: sensor_msgs/msg/Image
   gz_type_name: gz.msgs.Image
   direction: GZ_TO_ROS
@@ -32,17 +37,16 @@
   ros_type_name: sensor_msgs/msg/CameraInfo
   gz_type_name: gz.msgs.CameraInfo
   direction: GZ_TO_ROS
-
-- topic_name: camera_front/color/image_raw
+- topic_name: camera_top/depth/image_raw
   ros_type_name: sensor_msgs/msg/Image
   gz_type_name: gz.msgs.Image
   direction: GZ_TO_ROS
+
 - topic_name: camera_front/color/camera_info
   ros_type_name: sensor_msgs/msg/CameraInfo
   gz_type_name: gz.msgs.CameraInfo
   direction: GZ_TO_ROS
-
-- topic_name: camera_front/depth/image_raw
+- topic_name: camera_front/color/image_raw
   ros_type_name: sensor_msgs/msg/Image
   gz_type_name: gz.msgs.Image
   direction: GZ_TO_ROS
@@ -50,17 +54,16 @@
   ros_type_name: sensor_msgs/msg/CameraInfo
   gz_type_name: gz.msgs.CameraInfo
   direction: GZ_TO_ROS
-
-- topic_name: camera_left/color/image_raw
+- topic_name: camera_front/depth/image_raw
   ros_type_name: sensor_msgs/msg/Image
   gz_type_name: gz.msgs.Image
   direction: GZ_TO_ROS
+
 - topic_name: camera_left/color/camera_info
   ros_type_name: sensor_msgs/msg/CameraInfo
   gz_type_name: gz.msgs.CameraInfo
   direction: GZ_TO_ROS
-
-- topic_name: camera_left/depth/image_raw
+- topic_name: camera_left/color/image_raw
   ros_type_name: sensor_msgs/msg/Image
   gz_type_name: gz.msgs.Image
   direction: GZ_TO_ROS
@@ -68,21 +71,24 @@
   ros_type_name: sensor_msgs/msg/CameraInfo
   gz_type_name: gz.msgs.CameraInfo
   direction: GZ_TO_ROS
-
-- topic_name: camera_right/color/image_raw
+- topic_name: camera_left/depth/image_raw
   ros_type_name: sensor_msgs/msg/Image
   gz_type_name: gz.msgs.Image
   direction: GZ_TO_ROS
+
 - topic_name: camera_right/color/camera_info
   ros_type_name: sensor_msgs/msg/CameraInfo
   gz_type_name: gz.msgs.CameraInfo
   direction: GZ_TO_ROS
-
-- topic_name: camera_right/depth/image_raw
+- topic_name: camera_right/color/image_raw
   ros_type_name: sensor_msgs/msg/Image
   gz_type_name: gz.msgs.Image
   direction: GZ_TO_ROS
 - topic_name: camera_right/depth/camera_info
   ros_type_name: sensor_msgs/msg/CameraInfo
   gz_type_name: gz.msgs.CameraInfo
+  direction: GZ_TO_ROS
+- topic_name: camera_right/depth/image_raw
+  ros_type_name: sensor_msgs/msg/Image
+  gz_type_name: gz.msgs.Image
   direction: GZ_TO_ROS
