--- a/mobile_manipulator_gazebo_sim/config/controllers.yaml
+++ b/mobile_manipulator_gazebo_sim/config/controllers.yaml
@@ -30,6 +30,6 @@
       wheel_radius: 0.06
 
       publish_rate: 100.0
-      enable_odom_tf: true
+      enable_odom_tf: false
       odom_frame_id: odom
       base_frame_id: base_footprint
