gazebo_sim: disable diff_drive odom and add infra1 & 2 camera for gemini 2

--- a/mobile_manipulator_gazebo_sim/config/gz_bridge.yaml
+++ b/mobile_manipulator_gazebo_sim/config/gz_bridge.yaml
@@ -50,6 +50,22 @@
   ros_type_name: sensor_msgs/msg/Image
   gz_type_name: gz.msgs.Image
   direction: GZ_TO_ROS
+- topic_name: camera_front/infra1/camera_info
+  ros_type_name: sensor_msgs/msg/CameraInfo
+  gz_type_name: gz.msgs.CameraInfo
+  direction: GZ_TO_ROS
+- topic_name: camera_front/infra1/image_raw
+  ros_type_name: sensor_msgs/msg/Image
+  gz_type_name: gz.msgs.Image
+  direction: GZ_TO_ROS
+- topic_name: camera_front/infra2/camera_info
+  ros_type_name: sensor_msgs/msg/CameraInfo
+  gz_type_name: gz.msgs.CameraInfo
+  direction: GZ_TO_ROS
+- topic_name: camera_front/infra2/image_raw
+  ros_type_name: sensor_msgs/msg/Image
+  gz_type_name: gz.msgs.Image
+  direction: GZ_TO_ROS
 - topic_name: camera_front/depth/camera_info
   ros_type_name: sensor_msgs/msg/CameraInfo
   gz_type_name: gz.msgs.CameraInfo
