--- a/mobile_manipulator_perception/package.xml
+++ b/mobile_manipulator_perception/package.xml
@@ -12,7 +12,10 @@
     <buildtool_depend>ament_cmake</buildtool_depend>
 
     <!-- execution dependencies -->
+    <exec_depend>isaac_mapping_ros</exec_depend>
+    <exec_depend>isaac_ros_h264_encoder</exec_depend>
     <exec_depend>isaac_ros_nvblox</exec_depend>
+    <exec_depend>isaac_ros_visual_global_localization</exec_depend>
     <exec_depend>slam_toolbox</exec_depend>
 
     <export>
