--- a/mobile_manipulator_gazebo_sim/config/gz_bridge_robot.yaml
+++ b/mobile_manipulator_gazebo_sim/config/gz_bridge_robot.yaml
@@ -1,16 +1,11 @@
 # ref: https://docs.ros.org/en/jazzy/p/ros_gz_bridge/#example-5-configuring-the-bridge-via-yaml
 
-- topic_name: /clock
-  ros_type_name: rosgraph_msgs/msg/Clock
-  gz_type_name: gz.msgs.Clock
-  direction: GZ_TO_ROS
+- topic_name: cmd_vel
+  ros_type_name: geometry_msgs/msg/Twist
+  gz_type_name: gz.msgs.Twist
+  direction: ROS_TO_GZ
 
-- topic_name: /tf
-  ros_type_name: tf2_msgs/msg/TFMessage
-  gz_type_name: gz.msgs.Pose_V
-  direction: GZ_TO_ROS
-
-- topic_name: odom
+- topic_name: odom_base
   ros_type_name: nav_msgs/msg/Odometry
   gz_type_name: gz.msgs.Odometry
   direction: GZ_TO_ROS
