--- a/mobile_manipulator_gazebo_sim/package.xml
+++ b/mobile_manipulator_gazebo_sim/package.xml
@@ -12,10 +12,10 @@
     <buildtool_depend>ament_cmake</buildtool_depend>
 
     <!-- execution dependencies -->
-    <exec_depend>gz_ros2_control</exec_depend>
-    <exec_depend>ros_gz</exec_depend>
-    <exec_depend>ros2_control</exec_depend>
-    <exec_depend>ros2_controllers</exec_depend>
+
+    <!-- ros humble does not officially support gazebo harmonic, hence ros_gz cannot be installed by
+    rosdep -->
+    <!-- <exec_depend>ros_gz</exec_depend> -->
 
     <exec_depend>mobile_manipulator_bringup</exec_depend>
     <exec_depend>mobile_manipulator_description</exec_depend>
