--- a/mobile_manipulator_navigation/config/navigation.yaml
+++ b/mobile_manipulator_navigation/config/navigation.yaml
@@ -12,13 +12,13 @@
 
       behavior_plugins: [spin, backup, drive_on_heading, wait]
       spin:
-        plugin: nav2_behaviors::Spin
+        plugin: nav2_behaviors/Spin
       backup:
-        plugin: nav2_behaviors::BackUp
+        plugin: nav2_behaviors/BackUp
       drive_on_heading:
-        plugin: nav2_behaviors::DriveOnHeading
+        plugin: nav2_behaviors/DriveOnHeading
       wait:
-        plugin: nav2_behaviors::Wait
+        plugin: nav2_behaviors/Wait
 
   bt_navigator:
     ros__parameters:
@@ -28,9 +28,9 @@
 
       navigators: [navigate_to_pose, navigate_through_poses]
       navigate_to_pose:
-        plugin: nav2_bt_navigator::NavigateToPoseNavigator
+        plugin: nav2_bt_navigator/NavigateToPoseNavigator
       navigate_through_poses:
-        plugin: nav2_bt_navigator::NavigateThroughPosesNavigator
+        plugin: nav2_bt_navigator/NavigateThroughPosesNavigator
 
   planner_server:
     ros__parameters:
@@ -38,7 +38,7 @@
 
       planner_plugins: [GridBased]
       GridBased:
-        plugin: nav2_smac_planner::SmacPlannerHybrid
+        plugin: nav2_smac_planner/SmacPlannerHybrid
         tolerance: 0.3
         minimum_turning_radius: 0.0
         smooth_path: true
