--- a/mobile_manipulator_perception/config/perception.yaml
+++ b/mobile_manipulator_perception/config/perception.yaml
@@ -108,6 +108,7 @@
       layer_visualization_min_tsdf_weight: 0.1
       layer_visualization_exclusion_height_m: 2.0
       layer_visualization_exclusion_radius_m: 10.0
+      layer_streamer_bandwidth_limit_mbps: -1.0 # unlimited
 
       # map clearing
       map_clearing_frame_id: base_footprint
